# eia

./: Makefile  README.md  pyproject.toml  requirements.txt
.github/workflows/: validate.yaml
docs/: eia.html  index.html  search.js
docs/eia/: cli.html  form860m.html  form861m.html  form923.html  form930.html  hs861m.html
eia/: __init__.py  cli.py  form860m.py  form861.py  form861m.py  form923.py  form930.py  hs861m.py
tests/: tests.py
