[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools.package-data]
eia = ["*.py"]

# [tool.setuptools.dynamic]
# dependencies = {file=["requirements.txt"]}

[project]
name = "eia"
version = "0.0.0"
description = "EIA Form data accessor"
authors = [
    {name = "David P. Chassin <dchassin@eudoxys.com>"},
    ]
maintainers = [
    {name = "David P. Chassin <dchassin@eudoxys.com>"},
    ]
readme = "README.md"
requires-python = ">= 3.11"
keywords = ["github","python","EIA","Form"]
license = {text="MIT License"}
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Software Development :: Libraries",
    ]
# dynamic=["dependencies"]
dependencies=["pandas","openpyxl","requests"]

[project.urls]
Homepage = "https://github.com/eudoxys/eia"
Documentation = "https://www.eudoxys.com/eia"
Repository = "https://github.com/eudoxys/eia.git"
Issues = "https://github.com/eudoxys/eia/issues"

[project.scripts]
eia = "eia.cli:main"
